# hypercurve

./: .README.md.swp  .gitmodules  CMakeLists.txt  LICENCE.GPL3  LICENSE  LICENSE.MIT  README.md  Version.md  _.config.yml  config_gem.sh  index.md  main.cpp
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  cmake.yml
cmake/Modules/: FindCsound.cmake
csound_opcode/: CMakeLists.txt  csound_hypercurve.cpp  csound_hypercurve.cpp.autosave  hypertest.csd  other_test.csd  test.csd  test_csound.cpp
doc/: .Documentation.md.swp  Documentation.md  README.md
faust_lib/: CMakeLists.txt  README.md  hypercurve.dsp  hypercurve.lib  hypercurve_faust.h  hypercurve_test.dsp
faust_lib/faust_hypercurve_lib/: hhhhhhh.cpp  hypercurve.lib  hypercurve_faust.h  hypercurve_test.dsp
faust_lib/prototype_pure_faust/: prototype.dsp  prototype2.dsp
lua_module/: CMakeLists.txt  README.md  lua_hypercurve.cpp  lua_hypercurve.cpp.autosave  lua_hypercurve.rockspec  lua_test.cpp  reascript_hypercurve.lua  test.lua
ruby_gem/: Rakefile
ruby_gem/ext/: Makefile  core.h  curve_lib.h  extconf.rb  ruby_bridge.c  tst.rb
scripts/: gen_pic-waveform.rb  install_release.sh  package_release.rb
src/: c_ffi.h  core.h  cubic_spline.h  cubic_spline.h.HgyMzj  curve_lib.h  curve_lib.h.autosave  extra.h  extra.h.autosave  hypercurve.h  modulator_lib.h  utilities.h
src/asciiplot/: asciiplotter.cpp  asciiplotter.h
tests/: test.cpp  test.cpp.autosave
wasm/: build-wasm.sh  default.nix  result
wasm/wasm_test/: csound.js  index.html  sketch.js  style.css
